--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'client/**'
       - '.github/workflows/deploy-client.yml'
-  workflow_dispatch: {}   # allow manual runs from the Actions tab
+  workflow_dispatch: {}   # allow manual runs from the Actions 
 
 permissions:
   contents: read
